Just some more cleaning up of files and modified LinkedList to ArrayList.
This article had some interesting things to say: http://www.codeproject.com/Articles/340797/Number-crunching-Why-you-should-never-ever-EVER-us?display=Print